// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard and Grading NavLinks render for Role.Staff 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/courses/0/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/others\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint3.NavbarGroup>
  <Blueprint3.NavbarGroup align=\\"right\\">
    <NavLink to=\\"/courses/0/groundcontrol\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"satellite\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Ground Control
      </div>
    </NavLink>
    <NavLink to=\\"/courses/0/dashboard\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"globe\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Dashboard
      </div>
    </NavLink>
    <NavLink to=\\"/courses/0/sourcereel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink to=\\"/courses/0/grading\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Grading
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/storysimulator\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Story Simulator
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard, Grading and AdminPanel NavLinks do NOT render for Role.Student 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/courses/0/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/others\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard, Grading and AdminPanel NavLinks render for Role.Admin 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\">
    <NavLink to=\\"/courses/0/missions\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/quests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/paths\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/contests\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/others\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint3.NavbarGroup>
  <Blueprint3.NavbarGroup align=\\"right\\">
    <NavLink to=\\"/courses/0/groundcontrol\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"satellite\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Ground Control
      </div>
    </NavLink>
    <NavLink to=\\"/courses/0/dashboard\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"globe\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Dashboard
      </div>
    </NavLink>
    <NavLink to=\\"/courses/0/sourcereel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink to=\\"/courses/0/grading\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Grading
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/courses/0/storysimulator\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Story Simulator
      </div>
    </NavLink>
    <NavLink to=\\"/courses/0/adminpanel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"settings\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md hidden-lg\\">
        Admin Panel
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;
